--- a/dev/.jshintrc
+++ b/dev/.jshintrc
@@ -20,7 +20,7 @@
     ],
 
     // Development.
-    "debug": false, // Allow debugger statements e.g. browser breakpoints.
+    "debug": true, // Allow debugger statements e.g. browser breakpoints.
     "devel": true, // Allow developments statements e.g. `console.log();`.
 
     // The Good Parts.
